kustomize/gateway/resources/envoy/web/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge
  namespace: system-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: web-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: web-https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: edge-web-tls
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
